--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JOBSERA</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
   </head>
   <body>
+    <h2>Find Jobs -</h2>
+    <br />
+    <form action="{% url 'search' %}" method="POST">
+      {% csrf_token %}
+      <input type="text" class="textbox" name="search" placeholder="Search" />
+      <input title="Search..." value="Search" type="submit" class="button" />
+    </form>
     {% block content %} {% endblock content %}
   </body>
 </html>
