--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,4 @@
-{% extends "base.html" %} {% block content %} {% endblock content %}
+{% extends "base.html" %} 
+{% block content %} 
+{{ search }} 
+{% endblock content %}
