--- a/templates/search.html
+++ b/templates/search.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %} 
 {% block content %}
-<hr> <hr>
+<hr> 
 <h2 style="text-align: center">{{ search | title }} Jobs</h2>
-<br> <br>
+<br>
 
 <div class="row">
     {% for post in final_posts %}
     <div class="col-sm-4">
       <div class="card">
             <div class="card-body">
-                <h4 class="card-title">{{post.0}}</h4>
+              <a href="{{post.7}}">
+                <h4 class="card-title">{{post.0}}</h4></a>
 
                 <h6 class="card-title">{{post.1}}</h6>
 
@@ -17,7 +18,11 @@
 
                 <h6 class="card-title">{{post.3}}</h6>
 
-                <!-- <p class="card-text">This is a longer card with supporting text below.</p> -->
+                <h6 class="card-title"> <b>Requirements</b>:  {{post.4}}</h6> 
+
+                <p class="card-text"> {{ post.5 }} </p>
+
+                <small class="card-text"> {{ post.6 }} </small>
             </div>
       </div>
     </div>
