--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JOBSERA</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'stylesheet.css' %}" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
