--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JOBSERA</title>
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'images\logo.png' %}" type="image/png">
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}" />
     <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar sticky-top shadow p-3 mb-5 bg-white rounded">
+      <a class="navbar-brand text-dark" href="{% url 'home' %}">
+        <img src="{% static 'images\logo.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+        JOBSERA
+      </a>
+      <form action="{% url 'search' %}" method="POST">
+        {% csrf_token %}
+        <input
+          type="text"
+          class="textbox border-bottom-0"
+          name="search"
+          placeholder="Search Job Title, Company or Keywords"
+        />
+        <input
+          title="Search..."
+          value="Search"
+          type="submit"
+          class="button"
+        />
+      </form>
+    </nav>
+
     <div class="d-flex justify-content-center">
       <div>
         <h2 class="text-center">Find Jobs</h2>
@@ -24,9 +43,9 @@
           {% csrf_token %}
           <input
             type="text"
-            class="textbox"
+            class="textbox border-top-0"
             name="search"
-            placeholder="Search"
+            placeholder="Search Job Title, Company or Keywords"
           />
           <input
             title="Search..."
