--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -42,6 +42,11 @@ h1 {
   text-align: center;
 }
 
+input::placeholder {
+  font-size: 0.9em;
+  font-family: "Rajdhani", sans-serif;
+}
+
 nav a,
 form {
   padding: 0 50px;
@@ -163,6 +168,11 @@ button:focus {
   }
   input[type="submit"] {
     margin-top: 10px;
+    display: inline-block;
+    float: none !important;
+    left: 50%;
+    position: relative;
+    transform: translate(-50%);
   }
   input[type="text"]:focus {
     border: none;
