--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JOBSERA</title>
+    <title>Jobsera - Find your dream job!</title>
     <!-- Favicon -->
     <link rel="icon" href="{% static 'images\logo.png' %}" type="image/png">
     <!-- CSS -->
@@ -36,8 +36,8 @@
     </nav>
 
     <h1>
-      We will help you to find your dream job<br>
-      or maybe a normal one! 😁
+      Find your dream job<br>
+      or maybe a normal one! 
     </h1>
   
     <div class="d-flex justify-content-center">
