--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar sticky-top shadow p-3 mb-5 bg-white rounded">
       <a class="navbar-brand text-dark" href="{% url 'home' %}">
-        <img src="{% static 'images\logo.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="{% static 'images\final.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         JOBSERA
       </a>
       <form action="{% url 'search' %}" method="POST">
