--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobsera - Find your dream job!</title>
+    <title>Jobsera - GET A JOB  </title>
     <!-- Favicon -->
     <link rel="icon" href="{% static 'images\logo.png' %}" type="image/png">
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'stylesheet.css' %}" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <nav class="navbar sticky-top shadow p-3 mb-5 bg-white rounded">
@@ -58,9 +61,9 @@
         </form>
     </div>
 
-    
-
     {% block content %} {% endblock content %}
+
+    
 
     <script src="{% static 'script.js' %}"></script>
   </body>
