--- a/templates/search.html
+++ b/templates/search.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %} 
 {% block content %}
-<hr> 
+
 <br>
 
-<div class="row">
+<div class="row card-group main-content">
     {% for post in final_posts %}
-    <div class="col-sm-4">
-       <div class="card">
+    <div class="col-lg-4 col-md-6 col-sm-12 even">
+       <div class="card border-bottom-0 border-right-0 border-left-0">
             <div class="card-body">
               <a href="{{post.7}}" target="_blank">
                 <h4 class="card-title">{{post.0}}</h4></a>
@@ -30,5 +30,7 @@
     </div>
     {% endfor %}
 </div>
+
+
 
 {% endblock content %}
