--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
     {% for post in final_posts %}
     <div class="col-lg-4 col-md-6 col-sm-12 even">
        <div class="card border-bottom-0 border-right-0 border-left-0">
-            <div class="card-body">
+            <div class="card-body text-center">
               <a href="{{post.7}}" target="_blank">
                 <h4 class="card-title">{{post.0}}</h4></a>
 
