--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,10 @@
       <div class="container">
           <div class="row">
               <div class="col-md-5">
-                  <h5> Jobsera</h5>
+                <a class="navbar-brand text-white footer-logo" href="{% url 'home' %}">
+                  <img src="{% static 'images\final.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+                  JOBSERA
+                </a>
                   <div class="row">
                       <div class="col-6">
                           <ul class="list-unstyled">
