fixed-input-issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
           class="textbox border-bottom-0"
           name="search"
           placeholder="Search Job Title, Company or Keywords"
+          required
         />
         <input
           title="Search..."
@@ -51,6 +52,7 @@
             class="textbox border-top-0"
             name="search"
             placeholder="Search Job Title, Company or Keywords"
+            required
           /> <br>
           <input
             title="Search..."
@@ -118,6 +120,6 @@
       </div>
   </footer>
 
-    <script src="{% static 'script.js' %}"></script>
+    <script src="{% static 'app.js' %}"></script>
   </body>
 </html>
