--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Favicon -->
     <link rel="icon" href="{% static 'images\logo.png' %}" type="image/png">
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'stylesheet.css' %}" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Font awesome -->
@@ -120,6 +120,6 @@
       </div>
   </footer>
 
-    <script src="{% static 'app.js' %}"></script>
+    <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
